Исправил баг с непрогружающейся картнкой